--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,10 +6,13 @@ target 'Example' do
   use_frameworks!
 
   # Pods for Example
+  pod 'Dendrogram', :path => '../'
 
   target 'ExampleTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'Quick', '~> 1.2.0'
+    pod 'Nimble', '~> 7.0'
   end
 
 end
